<resources>
    <string name="app_name">UDP Sample Application - v1.0</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="config_f_main_title">UDP Service Configuration</string>
    <string name="author_info">Created by John Ho / Micronet.Inc / 2019</string>
    <string name="config_f_communication_type">Communication Type:</string>
    <string name="config_f_2_parties">2 Parties</string>
    <string name="config_f_3_parties">3 Parties</string>
    <string name="config_f_select">Device Type:</string>
    <string name="config_f_rbutton_client">Client</string>
    <string name="config_f_rbutton_server">Server</string>
    <string name="config_f_target_ip">Target IP:</string>
    <string name="config_f_target_port">Target Port:</string>
    <string name="config_f_message">Message:</string>
    <string name="config_f_unknown">N/A</string>
    <string name="config_f_device_ip">Device IP:</string>
    <string name="config_f_device_port">Device Port:</string>
    <string name="config_f_btn_lock_config">Lock Config</string>
    <string name="config_f_btn_reset_config">Reset Config</string>
    <string name="config_f_network_status">Network State</string>
    <string name="config_f_nw_sim_state">SIM State:</string>
    <string name="config_f_nw_internet_state">Internet State:</string>
    <string name="config_f_new_single_strength">Single Strength:</string>
    <string name="transmit_acton_f_main_title">Transmit Action</string>
    <string name="transmit_action_f_send_once_title">Send UDP Packet to Target</string>
    <string name="transmit_action_f_send_once_button">Send</string>
    <string name="transmit_action_f_send_cycle_title">Star UDP Cycle</string>
    <string name="config_f_btn_confirm">Confirm Target Info</string>
    <string name="transmit_action_f_send_cycle">Start UDP Cycle</string>
    <string name="transmit_action_f_cycle_time_unit"> -- Second</string>
    <string name="transmit_action_f_cycle_time_second">1</string>
    <string name="device_info_main_title">Device Information</string>
    <string name="device_info_app_name">UDP Sample Application</string>
    <string name="device_info_copyright">Copyright © 2019 Micronet Inc.</string>
    <string name="device_info_os_version">OS Version:</string>
    <string name="device_info_android_version">Android Build Version:</string>
    <string name="device_info_device_model">Device Model:</string>
    <string name="device_info_serial">Serial:</string>
    <string name="device_info_hardware_library_version">Hardware Library Version:</string>
    <string name="device_info_vehicle_bus_library_version">Vehicle Bus Library Version:</string>
    <string name="device_info_app_version">App Version:</string>
    <string name="device_info_device_name">Device Name:</string>
</resources>
